2004-05-06  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.c (source_to_dialog): use random
	color for calendar default.

2004-05-05  JP Rosevear  <jpr@ximian.com>

	Fixes #58025
	
	* gui/gnome-cal.c (set_search_query): kill warning
	(setup_config): don't set time out here
	(setup_widgets): set it here
	(gnome_calendar_destroy): clear the time out

	* gui/e-tasks.c (search_bar_sexp_changed_cb): kill warning
	(setup_config): don't set time out here
	(setup_widgets): set it here and remember the time out id
	(e_tasks_destroy): clear the time out

2004-05-05  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.c: make sure that we don't crash if
	there are no sources.
	(calendar_setup_new_task_list): fix the previous fix to work if
	there are sources.

2004-05-04  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.c: fix logic error.
	(source_group_can_add): helper function to fix groupwise case.
	I'm still not happy with this but it will work for now.

	* gui/dialogs/calendar-setup.c (source_to_dialog): convert units.
	(dialog_to_source): convert time units.

	* gui/dialogs/calendar-setup.glade. name the unit option menus.

2004-05-03  Rodney Dawes  <dobey@ximian.com>

	* gui/dialogs/select-source-dialog.c (select_source_dialog):
	Make this dialog be HIG-compliant and accessible

2004-05-03  Edgar Luna Díaz  <eald@linuxuanl.org>

	* gui/dialogs/select-source-dialog.c (select_source_dialog):
	Set the default window size to 276 x 320

	Fixes #57298

2004-05-03  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.glade: rename the cancel button.

2004-04-29  Larry Ewing  <lewing@ximian.com>

	* gui/e-cal-model.c (ecm_get_color_for_component): use the source
	color if it is set.  Yay for ugly colors.

	* gui/e-cal-model.h: add a color holder to the ECalModelComponent
	since the return value of the color stuff is const.

2004-05-03  JP Rosevear  <jpr@ximian.com>

	Fixes #51714
	